2004-10-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* src/thstr/thstr.c (th_normalize):
	Handle char of "Level 3".

2004-10-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* src/thcell/thcell.c (th_next_cell):
	Check for acell.hilo before placing duplicated SARA AM into the same
	cell.

	* tests/test_thcell.c:
	Add test case for duplicated SARA AM.

2004-10-12  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thctype.c (test_bool_funcs):
	Rewrite if-do-while loops with clearer while loops. Get rid of warning
	of range checking.

	* tests/test_thbrk.c, tests/test_thwbrk.c, test_thwchar.c:
	Add missing string.h includes.

2004-10-12  Theppitak Karoonboonyanan <thep@linux.thai.net>

	Handle the case of NIKHAHIT and MAITAIKHU, which can be in either
	above or top level. This behavior is defined as "level 3" in
	th_chlevel() returning value.

	* src/thcell/thcell.c (th_next_cell, th_prev_cell):
	Conditionally place character of weight 3 at above or top level.

	* src/thctype/thctype.h (th_chlevel):
	Document the "level 3".

	* src/thctype/thctype.c (_th_chlevel_tbl):
	Change levels of NIKHAHIT and MAITAIKHU to 3.

	* tests/test_thcell.c, tests/test_thrend.c:
	Add the test cases of NIKHAHIT and MAITAIKHU at top level.

2004-05-15  Pattara Kiatisevi <ott@linux.thai.net>

	* set the mode of cttex to firstmode=1 (we want it fast)

2004-04-08  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* AUTHORS:
	Update e-mail addresses.

2004-02-22  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thrend.c:
	Update check values as per new blank base glyph.

	* NEWS, configure.in:
	Version 0.1.3

2004-01-20  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* include/thai/thrend.h, src/thrend/thrend.c:
	Use TH_BLANK_BASE_GLYPH as a base for floating upper/lower vowels.

2003-09-10  Theppitak Karoonboonyanan <thep@linux.thai.net>

	*** Stop using CVS-generated ChangeLog, as it's hard to read ***

	* include/thai/Makefile.am: