@@ -3,6 +3,9 @@
 	* src/thstr/thstr.c (th_normalize):
 	Handle char of "Level 3".
 
+	* src/thinp/thinp.c (th_validate):
+	Handle correction of char of "Level 3".
+
 2004-10-13  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	* src/thcell/thcell.c (th_next_cell):
@@ -751,13 +754,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.66 2004-10-13 06:41:17 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.67 2004-10-13 06:54:12 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.66 2004-10-13 06:41:17 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.67 2004-10-13 06:54:12 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
